trunk/Archive2/03/c4ea1b4f78c3be/output
main.cpp: In function 'int main(int, char**)':
main.cpp:33:3: error: static assertion failed: std::make_unique is not present!
   static_assert (has::make_unique::value, "std::make_unique is not present!");
   ^
